deploy/gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dxjewkl7l-ingress
  namespace: 9df7a4db22
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: lgy-in-dev.cnbita.com  # host和http必须在同一个规则条目下
      http:  # 修正：将http缩进，作为host的子项
        paths:
          - path: /dxjewkl7l-d7fe-2559-ab62-c3b95a066a82(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: dxjewkl7l-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dxjewkl7l-service
  namespace: 9df7a4db22
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080  # 与Endpoints的port保持一致
---
apiVersion: v1
kind: Endpoints
metadata:
  name: dxjewkl7l-service  # 与Service同名同 namespace
  namespace: 9df7a4db22
subsets:
  - addresses:
      - ip: 192.168.6.10  # 外部目标IP
    ports:
      - port: 8080  # 与Service的targetPort保持一致
